--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.thebusybiscuit</groupId>
     <artifactId>ChestTerminal</artifactId>
-    <version>UNOFFICIAL</version>
+    <version>43 zh-CN</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
