--- a/.github/workflows/Maven.yml
+++ b/.github/workflows/Maven.yml
@@ -33,6 +33,6 @@ jobs:
         uses: actions/upload-artifact@v2
         if: success()
         with:
-          name: Artifact
+          name: ChestTerminal zh-CN
           path: target/ChestTerminal v43 zh-CN.jar
 # 注意要和打包出来的一致
